# Celery-Strategies-Analysis

./: .dockerignore  .gitignore  DOCKER_USAGE.md  Dockerfile  README.md  app.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose-ui.yml  docker-compose.yml  example_celery_usage.py  example_strategy_manager.py  pyproject.toml  requirements.txt  results_20250925_151133.json  results_20250925_151214.json  ui.sh
app/core/: __init__.py  base_strategy.py  celery_app.py  logger.py  settings.py  strategy_manager.py  tasks.py
app/database/: __init__.py  mongodb.py  redis_publisher.py
app/models/: strategy_models.py
app/strategies/: __init__.py  bb_strategy.py  bollinger_bands_strategy.py  ema_strategy.py  macd_strategy.py  mother_candle_strategy.py  pdhl_strategy.py  rsi_strategy.py  volume_breakout_strategy.py
app/ui/: __init__.py  app.py
app/ui/templates/: base.html  broker_dashboard.html  historical_data.html  index.html  log_viewer.html  logs.html  orders.html  positions.html
app/utility/: data_provider.py
core/: __init__.py  base_strategy.py  celery_app.py  celery_config.py  celery_tasks.py  result_processor.py  settings.py  strategy_manager.py  task_observer.py  tasks.py
database/: mongodb.py  redis_publisher.py
models/: __init__.py  analysis_models.py  observer_models.py  strategy_models.py
scripts/: run.sh
strategies/: __init__.py  bollinger_bands_strategy.py  custom_strategy.py  ema_strategy.py  macd_strategy.py  rsi_strategy.py  volume_breakout_strategy.py
web/: app.py
web/templates/: index.html
